Fix collapsed sidebar submenu classes when clicking on navbar toggler.

--- a/backend/app/assets/stylesheets/spree/backend/components/_main.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_main.scss
@@ -1,10 +1,6 @@
 #main-part {
   padding: 15px 35px 0;
   margin-top: 50px;
-
-  &.sidebar-collapsed {
-    padding-left: 85px;
-  }
 }
 
 #logo {
